JMK_78: Add GET mapping to get Proposals from specific Freelancer ID and specific ProposalStatus