@@ -1,9 +1,10 @@
 package com.jobmatrix.jm_proposal.serviceimpl;
 
 import com.common.entity.Freelancer;
+import com.common.enums.ProposalStatus;
+import com.common.exceptionHandling.FreelancerNotFoundException;
 import com.jobmatrix.jm_proposal.dto.ProposalSubmissionDTO;
 import com.jobmatrix.jm_proposal.entity.ProposalSubmission;
-import com.jobmatrix.jm_proposal.exception.FreelancerNotFoundException;
 import com.jobmatrix.jm_proposal.repository.FreelancerRepository;
 import com.jobmatrix.jm_proposal.repository.ProposalRepository;
 import com.jobmatrix.jm_proposal.test_utils.factory.ProposalTestDataFactory;
@@ -14,6 +15,10 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
 import java.math.BigDecimal;
 import java.util.Collections;
@@ -34,30 +39,30 @@ class ProposalServiceImplTest {
     @Mock
     private FreelancerRepository freelancerRepository;
 
+    @Mock
+    private ModelMapper modelMapper;
+
     @InjectMocks
     private ProposalServiceImpl proposalService;
-
-    private ModelMapper modelMapper;
 
     @BeforeEach
     void setUp() {
         UUID freelancerId = UUID.randomUUID();
         UUID clientId = UUID.randomUUID();
-        
+        // No need to initialize modelMapper since it's already mocked
         modelMapper = new ModelMapper();
-        
+
         ProposalSubmissionDTO requestDto = ProposalTestDataFactory.createProposalSubmissionRequest(freelancerId, clientId);
         ProposalSubmission savedProposal = ProposalTestDataFactory.createProposalEntity(1L, freelancerId, clientId);
     }
 
     @Test
     void submitProposal_shouldSaveProposal() {
-        // given
         ProposalSubmissionDTO request = ProposalSubmissionDTO.builder()
                 .jobPostingId(1)
                 .freelancerId(UUID.randomUUID())
                 .clientId(UUID.randomUUID())
-                .proposedBidAmount(new BigDecimal("1000.00"))
+                .proposedBidAmount(1000)
                 .coverLetter("Test cover letter")
                 .build();
 
@@ -65,90 +70,97 @@ class ProposalServiceImplTest {
         savedProposal.setProposalId(1L);
 
         when(proposalRepository.save(any(ProposalSubmission.class))).thenReturn(savedProposal);
-
-        // when
         ProposalSubmission result = proposalService.submitProposal(request);
 
-        // then
-        assertNotNull(result);
         assertEquals(1L, result.getProposalId());
         assertEquals(request.getJobPostingId(), result.getJobPostingId());
         assertEquals(request.getFreelancerId(), result.getFreelancerId());
         assertEquals(request.getClientId(), result.getClientId());
-        assertEquals(0, request.getProposedBidAmount().compareTo(result.getProposedBidAmount()));
+        assertEquals(1000, request.getProposedBidAmount());
         assertEquals(request.getCoverLetter(), result.getCoverLetter());
 
         verify(proposalRepository).save(any(ProposalSubmission.class));
     }
 
     @Test
-    void getProposalsByFreelancerId_whenProposalsExist_shouldReturnProposals() {
+    void getProposalsByStatuses_Success() {
         // given
         UUID freelancerId = UUID.randomUUID();
-        List<ProposalSubmissionDTO> expectedDtoList = List.of(
-                ProposalTestDataFactory.createProposalSubmissionRequest(freelancerId, UUID.randomUUID()),
-                ProposalTestDataFactory.createProposalSubmissionRequest(freelancerId, UUID.randomUUID())
-        );
-        List<ProposalSubmission> expectedProposals = expectedDtoList.stream()
-                .map(dto -> modelMapper.map(dto, ProposalSubmission.class))
-                .toList();
+        List<ProposalStatus> statuses = Arrays.asList(ProposalStatus.SUBMITTED, ProposalStatus.ACCEPTED);
+        
+        ProposalSubmission proposal1 = ProposalTestDataFactory.createProposalEntity(1L, freelancerId, UUID.randomUUID());
+        ProposalSubmission proposal2 = ProposalTestDataFactory.createProposalEntity(2L, freelancerId, UUID.randomUUID());
+        
+        when(freelancerRepository.existsById(freelancerId)).thenReturn(true);
 
-        when(freelancerRepository.findById(freelancerId))
-                .thenReturn(Optional.of(new Freelancer()));
-
-        when(proposalRepository.findByFreelancerId(freelancerId))
-                .thenReturn(expectedProposals);
+        // Mock repository calls for each status
+        for (ProposalStatus status : statuses) {
+            List<ProposalSubmission> proposals = List.of(proposal1, proposal2);
+            when(proposalRepository.findByFreelancerIdAndProposalStatus(freelancerId, status))
+                .thenReturn(proposals);
+        }
 
         // when
-        List<ProposalSubmission> result = proposalService.getProposalsByFreelancerId(freelancerId);
+        Map<ProposalStatus, List<ProposalSubmissionDTO>> result = 
+            proposalService.getProposalsByStatus(freelancerId, statuses);
 
         // then
         assertNotNull(result);
-        assertEquals(2, result.size());
-        assertEquals(expectedProposals.size(), result.size());
-        assertTrue(expectedProposals.containsAll(result) && result.containsAll(expectedProposals));
-        verify(freelancerRepository).findById(freelancerId);
-        verify(proposalRepository).findByFreelancerId(freelancerId);
+        assertTrue(result.containsKey(ProposalStatus.SUBMITTED));
+        assertTrue(result.containsKey(ProposalStatus.ACCEPTED));
+        
+        // Verify each status has the correct number of proposals
+        for (ProposalStatus status : statuses) {
+            List<ProposalSubmissionDTO> proposals = result.get(status);
+            assertNotNull(proposals);
+            assertEquals(2, proposals.size());
+        }
+        
+        // Verify repository interactions
+        for (ProposalStatus status : statuses) {
+            verify(proposalRepository).findByFreelancerIdAndProposalStatus(freelancerId, status);
+        }
+        verify(freelancerRepository).existsById(freelancerId);
     }
 
-
     @Test
-    void getProposalsByFreelancerId_whenNoProposals_shouldReturnEmptyList() {
+    void getProposalsByStatuses_WithEmptyStatusList() {
         // given
         UUID freelancerId = UUID.randomUUID();
-
-        when(freelancerRepository.findById(freelancerId))
-                .thenReturn(Optional.of(new Freelancer()));
-
-        List<ProposalSubmissionDTO> emptyDtoList = Collections.emptyList();
-        when(proposalRepository.findByFreelancerId(freelancerId))
-                .thenReturn(emptyDtoList.stream()
-                        .map(dto -> modelMapper.map(dto, ProposalSubmission.class))
-                        .toList());
+        List<ProposalStatus> statuses = Collections.emptyList();
+        
+        when(freelancerRepository.existsById(freelancerId)).thenReturn(true);
 
         // when
-        List<ProposalSubmission> result = proposalService.getProposalsByFreelancerId(freelancerId);
+        Map<ProposalStatus, List<ProposalSubmissionDTO>> result = 
+            proposalService.getProposalsByStatus(freelancerId, statuses);
 
         // then
         assertNotNull(result);
         assertTrue(result.isEmpty());
-        verify(freelancerRepository).findById(freelancerId);
-        verify(proposalRepository).findByFreelancerId(freelancerId);
+        
+        verify(freelancerRepository).existsById(freelancerId);
+        verifyNoMoreInteractions(proposalRepository);
     }
 
     @Test
-    void getProposalsByFreelancerId_whenFreelancerDoesNotExist_shouldThrowException() {
+    void getProposalsByStatuses_ThrowsFreelancerNotFoundException() {
         // given
         UUID freelancerId = UUID.randomUUID();
-        when(freelancerRepository.findById(freelancerId)).thenReturn(Optional.empty());
+        List<ProposalStatus> statuses = Arrays.asList(ProposalStatus.SUBMITTED);
+        
+        when(freelancerRepository.existsById(freelancerId)).thenReturn(false);
 
-        // when + then
-        assertThrows(FreelancerNotFoundException.class, () -> {
-            proposalService.getProposalsByFreelancerId(freelancerId);
-        });
-
-        verify(freelancerRepository).findById(freelancerId);
-        verifyNoInteractions(proposalRepository);
+        // when & then
+        FreelancerNotFoundException exception = assertThrows(
+            FreelancerNotFoundException.class, 
+            () -> proposalService.getProposalsByStatus(freelancerId, statuses)
+        );
+        
+        assertEquals("Freelancer not found with Freelancer ID: " + freelancerId, exception.getMessage());
+        
+        verify(freelancerRepository).existsById(freelancerId);
+        verifyNoMoreInteractions(proposalRepository);
     }
 
 
